# dsp

./: README.md  dsp_part1.ipynb  pyproject.toml
dnsmos_out/: DNSMOS_results.csv  DNSMOS_results_deepfilter.csv
dsp/: __init__.py  equalizer.py  mixer.py
metrics/: metrics.csv  metrics_all.csv  metrics_processed.csv
nisqa_out/: NISQA_results.csv
nisqa_out_deepfilter/: NISQA_results.csv
notebooks/: dsp_part1.ipynb  dsp_part2.ipynb  dsp_part3.ipynb
