[tool.poetry]
name = "dsp"
version = "0.1.0"
description = "homework for dsp course"
authors = ["Alexey Kalinin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
soundfile = "^0.12.1"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
